--- a/Assignment_SARSA_with_linear_function_approximation.ipynb
+++ b/Assignment_SARSA_with_linear_function_approximation.ipynb
@@ -9,7 +9,7 @@
     "## Yue Dong & Ali Emami\n",
     "In this assignment, Ali and I want to demonstrate the experiments of performing SARSA($\\lambda$) using linear function approximation. We use the SARSA algorithm for on-policy control, implemented using the backward-view (eligibility traces).\n",
     "\n",
-    "The difference of using linear function approxiamation in SARSA is that the action-value function Q(s,a) is approximated linearly by the function\n",
+    "The difference of using linear function approximation in SARSA is that the action-value function Q(s,a) is approximated linearly by the function\n",
     "$$Q(s,a,W)= \\phi(s,a)^T * W$$ where W is a vector and $\\phi$ a vector representing features."
    ]
   },
@@ -336,15 +336,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"600\"\n",
+       "            height=\"300\"\n",
+       "            src=\"comparison_with_different_lambda.pdf\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1181c8410>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "IFrame(\"comparison_with_different_lambda.pdf\", width=600, height=300)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following graph compares different algorithms we used for Easy21. \n",
+    "The above graph compares different algorithms we used for Easy21. \n",
     "\n",
-    "-learning with different $\\lambda$ makes a difference in learning, intermedia values are better.\n",
+    "- learning with different $\\lambda$ makes a difference in learning, lower to intermediate values are learning better (0 to 0.4). We could conclude that MC control ($\\lambda=1$) is learning the slowest among all different lambda values because MC has the highest variance among all sarsa($\\lambda$) leaners. \n",
     "\n",
-    "With less variables to learn, function approximation decreases learning time in Easy21. This is, however, at the cost of some precision since the features are generalized. \n",
-    "The overlapping regions led to strange results, likely caused by having had certain states triggering multiple regions, and having the sum of their weights lead to values greater than one.  These regions should be removed—no significant benefit was observed from them."
+    "- With less variables to learn, function approximation decreases learning time in Easy21. Our last assignment presented the result without function approximation.  At iteration 3000, most values are still not accurate yet. In this assignment, at step 3000, we could see that the values are well approximations of the optimal values. \n",
+    "\n",
+    "- However, the fast learning is at the cost of some precision since the features are generalized.  The overlapping regions led to strange results, likely caused by having had certain states triggering multiple regions, and having the sum of their weights lead to values greater than one.  These regions should be removed—no significant benefit was observed from them."
    ]
   },
   {
