--- a/Assignment_SARSA_with_linear_function_approximation.ipynb
+++ b/Assignment_SARSA_with_linear_function_approximation.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -345,28 +345,20 @@
     {
      "data": {
       "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"600\"\n",
-       "            height=\"300\"\n",
-       "            src=\"comparison_with_different_lambda.pdf\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
+       "<img src=\"comparison_with_different_lambda.png\"/>"
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1181c8410>"
+       "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(\"comparison_with_different_lambda.pdf\", width=600, height=300)"
+    "from IPython.display import Image\n",
+    "Image(url=\"comparison_with_different_lambda.png\")"
    ]
   },
   {
